# hSensors

./: .gitignore  .gitmodules  CMakeLists.txt  Hitechnic_Accel.cpp  Hitechnic_Compass.cpp  Hitechnic_Compass.h  Hitechnic_Gyro.cpp  README.md  build.ninja  build.py  build.sh  hSensors.cmake  hitechnic-accelerometer.cpp  hitechnic-accelerometer.h  hitechnic-color-v2.cpp  hitechnic-color-v2.h  hitechnic.h  lego-light.cpp  lego-light.h  lego-sound.cpp  lego-sound.h  lego-touch.cpp  lego-touch.h  lego-ultrasonic.cpp  lego-ultrasonic.h  lego.h  library.cmake  metadata.yaml  module.yaml  rules.ninja
doc/api/: hitechnic-accel.rst  hitechnic-color.rst  hitechnic-compass.rst  hitechnic-gyro.rst  index.rst  lego-light.rst  lego-touch.rst  lego-ultrasonic.rst
docs/: hitechnic.md  index  index.md  lego.md
docs/test/: doxygen
examples/: examples_list.yaml  hitechnic_accel.cpp  hitechnic_angle.cpp  hitechnic_colorv2.cpp  hitechnic_compass.cpp  hitechnic_eopd.cpp  hitechnic_gyro.cpp  hitechnic_irseeker.cpp  lego_light.cpp  lego_sound.cpp  lego_temp.cpp  lego_touch.cpp  lego_ultrasonic.cpp  mindsensors_irdistance.cpp  mindsensors_lineleader.cpp  mindsensors_numericpad.cpp  mindsensors_pressure.cpp  mindsensors_sumoeyes.cpp  mindsensors_touch.cpp  robocore.cpp  robotc_hitechnic_accel.cpp  robotc_hitechnic_compass.cpp  robotc_lego_light.cpp  robotc_lego_touch.cpp
examples/core2/: hitechnic_angle.cpp  hitechnic_colorv2.cpp  hitechnic_eopd.cpp  hitechnic_gyro.cpp  lego_light.cpp  lego_sound.cpp  lego_temp.cpp  lego_touch.cpp
examples/core2mini/: hitechnic_accel.cpp  hitechnic_angle.cpp  hitechnic_compass.cpp  hitechnic_gyro.cpp  lego_light.cpp  lego_sound.cpp  lego_touch.cpp  lego_ultrasonic.cpp  mindsensors_irdistance.cpp  mindsensors_lineleader.cpp  mindsensors_numericpad.cpp  mindsensors_pressure.cpp  mindsensors_sumoeyes.cpp
examples/robocore/: hitechnic_accel.cpp  hitechnic_angle.cpp  hitechnic_colorv2.cpp  hitechnic_compass.cpp  hitechnic_eopd.cpp  hitechnic_gyro.cpp  hitechnic_irseeker.cpp  lego_light.cpp  lego_sound.cpp  lego_temp.cpp  lego_touch.cpp  lego_ultrasonic.cpp  mindsensors_irdistance.cpp  mindsensors_lineleader.cpp  mindsensors_numericpad.cpp  mindsensors_pressure.cpp  mindsensors_sumoeyes.cpp
include/: Hitechnic_Accel.h  Hitechnic_Angle.h  Hitechnic_ColorV2.h  Hitechnic_Compass.h  Hitechnic_EOPD.h  Hitechnic_Gyro.h  Hitechnic_IRSeeker.h  Lego_Light.h  Lego_Sound.h  Lego_Temp.h  Lego_Touch.h  Lego_Ultrasonic.h  Mindsensors_IRDistance.h  Mindsensors_LineLeader.h  Mindsensors_NumericPad.h  Mindsensors_Pressure.h  Mindsensors_SumoEyes.h  Mindsensors_Touch.h  hitechnic-accelerometer.h  hitechnic-color-v2.h  hitechnic-gyro.h  hitechnic.h  lego-light.h  lego-sound.h  lego-touch.h  lego-ultrasonic.h  lego.h
include/robotc/: hitechnic.h  lego.h
project_template_VSCode/: CMakeLists.txt  main.cpp
py-connector/: CMakeLists.txt  exports
src/: Hitechnic_Accel.cpp  Hitechnic_Angle.cpp  Hitechnic_ColorV2.cpp  Hitechnic_Compass.cpp  Hitechnic_EOPD.cpp  Hitechnic_Gyro.cpp  Hitechnic_IRSeeker.cpp  Lego_Light.cpp  Lego_Sound.cpp  Lego_Temp.cpp  Lego_Touch.cpp  Lego_Ultrasonic.cpp  Mindsensors_IRDistance.cpp  Mindsensors_LineLeader.cpp  Mindsensors_NumericPad.cpp  Mindsensors_Pressure.cpp  Mindsensors_SumoEyes.cpp  Mindsensors_Touch.cpp
src/robotc/: hitechnic-color-v2.cpp  hitechnic-gyro.cpp  lego-ultrasonic.cpp
tests/: CMakeLists.txt  build_tests.sh
